force-app/main/default/objects/Deployment_Flow__c/Deployment_Flow__c.object-meta.xml
<CustomObject>
    <label>Pipeline</label>
    <nameField>
        <label>Pipeline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>