force-app/main/default/objects/Deployment_Flow__c/fields/Apply_Connection_Behaviours_to_existing__c.field-meta.xml
<CustomField>
    <fullName>Apply_Connection_Behaviours_to_existing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this option if you want User Stories which already promoted in your Copado Pipeline to apply to the connection behaviours for back promotions which you create in Copado Continuous Delivery</inlineHelpText>
    <label>Apply Connection Behaviors to All</label>
    <type>Checkbox</type>
</CustomField>