force-app/main/default/objects/Deployment_Flow__c/fields/Continuous_Delivery_Configuration_Json__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Delivery_Configuration_Json__c</fullName>
    <label>Continuous Delivery Configuration Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>