force-app/main/default/objects/Deployment_Flow__c/fields/Continuous_Delivery_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Delivery_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Continuous Delivery Enabled</label>
    <type>Checkbox</type>
</CustomField>