force-app/main/default/objects/Deployment_Flow__c/fields/Exclude_From_Auto_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Auto_Resolve__c</fullName>
    <description>Conflicts found in the selected metadata types are not auto-resolved by Copado when merging feature branches into the promotion branch. The conflicts can be manually resolved using Copado.</description>
    <inlineHelpText>Conflicts found in the selected metadata types are not auto-resolved by Copado when merging feature branches into the promotion branch. The conflicts can be manually resolved using Copado.This field only affects metadata format pipelines and not source format pipelines.</inlineHelpText>
    <label>Exclude From Auto Resolve</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Auto_Resolve_Exceptions</valueSetName>
    </valueSet>
</CustomField>