force-app/main/default/objects/Deployment_Flow__c/fields/Manage_Branches__c.field-meta.xml
<CustomField>
    <fullName>Manage_Branches__c</fullName>
    <description>Link to open the Pipeline Manager to promote and back promote User Stories.</description>
    <formula>HYPERLINK(&apos;/apex/&apos;&amp;
            IF($Setup.Settings__c.Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;)&amp;IF( ISPICKVAL(Calculate_Based_on__c, &apos;User Story&apos;), IF( Active__c,&apos;PipelineManager?mode=manager&amp;id=&apos;&amp;Id, &apos;PipelineManager?mode=diagram&amp;id=&apos;&amp;Id), &apos;BranchManagement?id=&apos;&amp;Id), $Label.copado__PipelineManager, IF($User.UIThemeDisplayed != &quot;Theme4d&quot;,&apos;_blank&apos;,&apos;_self&apos;))</formula>
    <inlineHelpText>Link to open the Pipeline Manager to promote and back promote User Stories.</inlineHelpText>
    <label>Manage Releases</label>
    <type>Text</type>
</CustomField>