force-app/main/default/objects/Deployment_Flow__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SFDX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>