force-app/main/default/objects/Deployment_Flow__c/listViews/Test_Abj.listView-meta.xml
<ListView>
    <fullName>Test_Abj</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Test Abj</label>
</ListView>